...
        TopAppBar(
            modifier = Modifier.background(Color.Black),
            title = { Text("Contact") },
            navigationIcon = {
              IconButton(
                  onClick = { navigationActions.goBack() },
                  modifier = Modifier.testTag("backButton")) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Outlined.ArrowBack,
                        contentDescription = "Back")
                  }
            },
            actions = {
              var expanded by remember { mutableStateOf(false) }

              IconButton(
                  onClick = { expanded = true }, modifier = Modifier.testTag("moreOptionsButton")) {
                    Icon(
                        imageVector = Icons.Default.MoreVert,
                        contentDescription = "More options",
                        tint = Color.White)
                  }

              DropdownMenu(expanded = expanded, onDismissRequest = { expanded = false }) {
                DropdownMenuItem(
                    modifier = Modifier.testTag("blockUserButton"),
                    onClick = {
                      expanded = false
                      showDialog = true
                    },
                    text = { Text("Block User") })
                if (isFriend) {
...
            isFriend -> {
              // Friend: show "Send a message"
              Button(
                  modifier =
                      Modifier.fillMaxWidth()
                          .padding(horizontal = 50.dp, vertical = 30.dp)
                          .testTag("sendMessageButton"),
                  colors = ButtonDefaults.buttonColors(com.swent.suddenbump.ui.theme.Purple40),
                  onClick = {
                    userViewModel.user = user
                    navigationActions.navigateTo(Screen.CHAT)
                  }) {
                    Text("Send a message", color = Color.White)
...
            AlertDialog(
                onDismissRequest = { showDialog = false },
                title = { Text("Block User") },
                text = { Text("Are you sure you want to block this user?") },
                confirmButton = {
                  Button(
                      modifier = Modifier.testTag("blockUserConfirmButton"),
                      onClick = {
                        showDialog = false
                        userViewModel.blockUser(
                            user = userViewModel.getCurrentUser().value,
                            blockedUser = user,
                            onSuccess = { navigationActions.goBack() },
...
