...
      content = { padding ->
        Column(
            modifier =
                Modifier.padding(padding)
                    .background(Color.Black)
                    .fillMaxSize()
                    .testTag("pendingMeetingsScreen")) {
              ScrollablePendingMeetings(
                  meetings = meetings.filter { !it.accepted && it.friendId == currentUserId },
                  userFriends = userFriends,
                  meetingViewModel = meetingViewModel)
            }
      })
...
                    // Accept Button
                    IconButton(
                        onClick = {
                          val updatedMeeting = meeting.copy(accepted = true)
                          meetingViewModel.updateMeeting(updatedMeeting)
                        },
                        modifier = Modifier.testTag("acceptButton").size(36.dp)) {
                          Icon(
                              imageVector = Icons.Default.Check,
                              contentDescription = "Accept",
                              tint = Color.White,
                              modifier = Modifier.size(24.dp))
                        }

                    Spacer(modifier = Modifier.width(4.dp))

                    // Decline Button
                    IconButton(
                        onClick = { meetingViewModel.deleteMeeting(meeting.meetingId) },
                        modifier = Modifier.testTag("denyButton").size(36.dp)) {
                          Icon(
                              imageVector = Icons.Default.Close,
                              contentDescription = "Decline",
                              tint = Color.White,
                              modifier = Modifier.size(24.dp))
                        }
...
        // Invitation Details Row
        Row(
            horizontalArrangement = Arrangement.SpaceBetween,
            verticalAlignment = Alignment.CenterVertically,
            modifier = Modifier.fillMaxWidth()) {
              Card(
                  modifier = Modifier.fillMaxWidth().padding(8.dp).testTag("meetingCard"),
                  colors = CardDefaults.cardColors(containerColor = Pinkish)) {
                    Row(
                        modifier = Modifier.fillMaxWidth().padding(16.dp),
                        verticalAlignment = Alignment.CenterVertically,
                        horizontalArrangement = Arrangement.spacedBy(8.dp)) {
                          // Profile Image
...
