...
                    .background(Color.Black)
                    .padding(horizontal = 16.dp, vertical = 15.dp),
            horizontalArrangement = Arrangement.SpaceBetween,
            verticalAlignment = Alignment.CenterVertically) {
              IconButton(
                  onClick = { navigationActions.navigateTo(Screen.SETTINGS) },
                  modifier = Modifier.testTag("settingsFab")) {
                    Icon(
                        imageVector = Icons.Default.Settings,
                        contentDescription = "Settings",
                        tint = Color.White)
                  }
              Text(
...
                          fontSize = 30.sp, lineHeight = 44.sp),
                  color = Pinkish,
                  fontWeight = FontWeight.Bold,
                  textAlign = TextAlign.Center)
              IconButton(
                  onClick = { navigationActions.navigateTo(Screen.ADD_CONTACT) },
                  modifier = Modifier.testTag("seeFriendsFab")) {
                    Icon(
                        imageVector = Icons.Default.AccountCircle,
                        contentDescription = "See Friends",
                        tint = Color.White)
                  }
            }
      },
      modifier = Modifier.testTag("overviewScreen"),
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route -> navigationActions.navigateTo(route) },
            tabList = LIST_TOP_LEVEL_DESTINATION,
            selectedItem = navigationActions.currentRoute())
      },
...
              if (isChecked) {
                userViewModel.shareLocationWithFriend(
                    uid = userViewModel.getCurrentUser().value.uid,
                    friend = user,
                    onSuccess = {},
                    onFailure = { exception ->
                      Log.e("Overview", "Failed to share location: ${exception.message}")
                    })
              } else {
                userViewModel.stopSharingLocationWithFriend(
                    uid = userViewModel.getCurrentUser().value.uid,
                    friend = user,
                    onSuccess = {},
...
