...
      content = { padding ->
        Column(
            modifier =
                Modifier.padding(padding)
                    .background(Color.Black)
                    .fillMaxSize()
                    .testTag("calendarMeetingsScreen")) {
              ScrollableInfiniteTimeline(
                  meetings = meetings.filter { it.accepted },
                  userFriends = userFriends,
                  navigationActions,
                  meetingViewModel,
                  currentUserId = currentUserId,
...
                      style = MaterialTheme.typography.bodySmall)
                }
              }
            }) {
              IconButton(
                  onClick = { navigationActions.navigateTo(Screen.PENDING_MEETINGS) },
                  modifier = Modifier.testTag("pendingMeetingsButton")) {
                    Icon(
                        imageVector = Icons.Default.Notifications,
                        contentDescription = "Pending Meetings",
                        tint = Color.White)
                  }
            }
...
